# experimental

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
CSRF exploit in Laravel 4/: Dockerfile
CVE-2017-9303-laravel-5.4.21/: .env.example  Dockerfile  composer.json  docker-compose.yml  readme.md  vhost.conf
CVE-2024-1874/: README.md  run.php
CudaRuntime1/: CudaRuntime1.sln  CudaRuntime1.vcxproj
abtest-XAFTemplateGallery/: Directory.Packages.props  abtest-XAFTemplateGallery.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  launchSettings.json
action-helloworld/: README.md  action.yml
asm-hello-world/: README.md  main.s
aws-sqs/: .env.example  README.md  composer.json
demo-laravel-roadrunner/: .gitignore  .rr.yaml  README.md  composer.json
docker-ai/: Dockerfile  README.md  chat.http  docker-compose.yml  docker.http  ollama.http  package-lock.json  package.json  server.js
docker-msys2/: Dockerfile
docker-msys2-devel/: Dockerfile
docker-msys2-php-devel/: .gitignore  Dockerfile  README.md
docker-starcoder2-7b/: .gitignore  Dockerfile.downloader  Dockerfile.finetuner  README.md  axolotl_config.yml  download_model.py
docs/: Home.md  _Footer.md  docs.md  laravel-asana.md
dotnet-www/: Dockerfile  Global.asax  Global.asax.cs  dotnet-www.csproj  dotnet-www.sln  dotnet-www.vbproj  packages.config
dotnet-www.Tests/: dotnet-www.Tests.csproj
dotnetcore-www/: Dockerfile  (+4 more)
dotnetcore-www.tests/: UnitTest1.cs  dotnetcore-www.tests.csproj
ext-php-hello-world/: Cargo.toml  README.md
(+180 files in other folders)
